--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:a="http://schemas.android.com/apk/res/android"
       package="com.giago.games.carwars.android"
-      android:screenOrientation="landscape"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="6" android:targetSdkVersion="11" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name="HelloGameActivity"
-                  android:label="@string/app_name"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-                  android:configChanges="keyboardHidden|orientation">
+      a:screenOrientation="portrait"
+      a:versionCode="1"
+      a:versionName="1.0">
+    <uses-sdk a:minSdkVersion="6" a:targetSdkVersion="11" />
+    <uses-permission a:name="android.permission.WAKE_LOCK" />
+    <application a:icon="@drawable/icon" a:label="@string/app_name" a:debuggable="true">
+        <activity a:name="CarwarsGameActivity"
+        		  a:screenOrientation="portrait"
+                  a:label="@string/app_name"
+                  a:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  a:configChanges="keyboardHidden|orientation">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action a:name="android.intent.action.MAIN" />
+                <category a:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
