--- a/android/default.properties
+++ b/android/default.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=android-8
-android.library.reference.1=../../../android/
+android.library.reference.1=../../../games/forplay_trunk/android/
